<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Class</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Þetta virkaði! Byrjum á appinu</string>
    <string name="sonsie">hi sonsie</string>
    <string name="laugar">Laugar</string>
    <string name="kringlan">Kringlan</string>
    <string name="hfj">Hafnarfjörður</string>
    <string name="ogurkvarf">Ögurhvarf</string>
    <string name="egils">Egilshöll</string>
    <string name="hr">HR</string>
    <string name="kpv">Kópavogur</string>
    <string name="mosfells">Mosfellsbær</string>
    <string name="nes">Seltjarnarnes</string>
    <string name="spong">Spöng</string>
    <string name="opnunartimar">Opnunartímar</string>
    
    <string name="netfang">Netfang</string>
    <string name="lykilord">Lykilorð</string>
    <string name="skraInn">Skrá Inn</string>
    <string name="bakgrunnur">Bakgrunnur</string>
    
   	<string name="stod_description">Mynd af stöð</string>
    <string name="stodvar">Um stöðvar</string>
    <string name="stundatafla">Stundatafla</string>
    <string name="testdb">Test database</string>
    <string name="weekday">Fimmtudagur</string>
    
    <string name="pageview">PageView Test</string>
    
    <string name="veljaStod">Veldu stöð</string>
    <string name="veljaTegund">Veldu tegund</string>
    <string name="expandable">Expandable list</string>
 
    <string-array name="stodvar">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    
    <string-array name="tegundir">
        <item>Brennsla / mótun</item>
        <item>Dans</item>
        <item>Hardcore / alhliða þjálfun</item>
        <item>Hardcore/alhliða</item>
        <item>Lífsstílsnámskeið</item>
        <item>Líkami og sál</item>
        <item>Rólegt</item>
        <item>Spor</item>
        <item>Styrkur</item>
        <item>óflokkað</item>
    </string-array>
</resources>
