<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:background="@color/wcRed">
	<!-- 
    <FrameLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    tools:context=".Opnunartimar" >
	    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/bakgrunnur"
	        android:src="@drawable/red" />    
	-->		
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
			
		    <Button
		        android:id="@+id/egils_opnun"
		        android:text="@string/egils" 
		        android:layout_alignParentTop="true"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
			
		    <Button
		        android:id="@+id/hfj_opnun"
		        android:text="@string/hfj" 
		        android:layout_below="@+id/egils_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		    
		    <Button
		        android:id="@+id/hr_opnun"
		        android:text="@string/hr" 
		        android:layout_below="@+id/hfj_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		    
			<Button
		        android:id="@+id/kop_opnun"
		        android:text="@string/kpv" 
		        android:layout_below="@+id/hr_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		    
		    <Button
		        android:id="@+id/kringlan_opnun"
		        android:text="@string/kringlan" 
		        android:layout_below="@+id/kop_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		
		    <Button
		        android:id="@+id/laugar_opnun"
		        android:text="@string/laugar"
		        android:layout_below="@+id/kringlan_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		    
		    <Button
		        android:id="@+id/mosfells_opnun"
		        android:text="@string/mosfells" 
		        android:layout_below="@+id/laugar_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		    
		    <Button
		        android:id="@+id/nes_opnun"
		        android:text="@string/nes" 
		        android:layout_below="@+id/mosfells_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
			
			<Button
		        android:id="@+id/spong_opnun"
		        android:text="@string/spong" 
		        android:layout_below="@+id/nes_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/rounded_edittext" />
		
			<Button
		        android:id="@+id/ogur_opnun"
		        android:text="@string/ogurkvarf" 
		        android:layout_below="@+id/spong_opnun"
		        
		        android:textSize="30sp"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="20dp" 
		        android:background="@drawable/rounded_edittext" />
			
			<TextView
			    android:id="@+id/dummy"
			    android:text="@+string/dummy"
			    android:layout_below="@+id/ogur_opnun"
			    
			    android:layout_width="fill_parent"
			    android:layout_height="0dp" />
		
		</RelativeLayout>
	<!-- 
	</FrameLayout>
 	-->
</ScrollView>
	